// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should handle no access rights 1`] = `
<Alert
  className="spacer-top"
  variant="warning"
>
  code_viewer.no_source_code_displayed_due_to_security
</Alert>
`;

exports[`should handle duplication popup 1`] = `
<Context.Consumer>
  [Function]
</Context.Consumer>
`;

exports[`should render correctly 1`] = `
<div>
  <DeferredSpinner
    ariaLabel="code_viewer.loading"
  />
</div>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <ContextProvider
    key="1-0-0"
    value={
      {
        "branchLike": undefined,
        "file": {},
      }
    }
  >
    <ComponentSourceSnippetGroupViewer
      duplicationsByLine={{}}
      isLastOccurenceOfPrimaryComponent={false}
      issue={
        {
          "actions": [],
          "component": "project:main.js",
          "componentEnabled": true,
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": [
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "flowsWithType": [],
          "key": "1",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": {
            "endLine": 2,
            "endOffset": 15,
            "startLine": 1,
            "startOffset": 0,
          },
          "transitions": [],
          "type": "BUG",
        }
      }
      issuesByLine={{}}
      lastSnippetGroup={true}
      loadDuplications={[Function]}
      locations={
        [
          {
            "component": "project:main.js",
            "index": 0,
            "textRange": {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ]
      }
      onIssueSelect={[MockFunction]}
      onLocationSelect={[MockFunction]}
      renderDuplicationPopup={[Function]}
      snippetGroup={
        {
          "component": {},
          "locations": [
            {
              "component": "project:main.js",
              "index": 0,
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "sources": [],
        }
      }
    />
  </ContextProvider>
</Fragment>
`;

exports[`should render correctly: no component found 1`] = `
<Fragment>
  <ContextProvider
    key="unknown-0-0"
    value={
      {
        "branchLike": undefined,
        "file": {},
      }
    }
  >
    <ComponentSourceSnippetGroupViewer
      duplicationsByLine={{}}
      isLastOccurenceOfPrimaryComponent={false}
      issue={
        {
          "actions": [],
          "component": "test.js",
          "componentEnabled": true,
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": [
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "flowsWithType": [],
          "key": "unknown",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": [],
          "type": "BUG",
        }
      }
      issuesByLine={{}}
      lastSnippetGroup={false}
      loadDuplications={[Function]}
      locations={[]}
      onIssueSelect={[MockFunction]}
      onLocationSelect={[MockFunction]}
      renderDuplicationPopup={[Function]}
      snippetGroup={
        {
          "component": {},
          "locations": [],
          "sources": [],
        }
      }
    />
  </ContextProvider>
  <ContextProvider
    key="unknown-0-1"
    value={
      {
        "branchLike": undefined,
        "file": {},
      }
    }
  >
    <ComponentSourceSnippetGroupViewer
      duplicationsByLine={{}}
      isLastOccurenceOfPrimaryComponent={false}
      issue={
        {
          "actions": [],
          "component": "test.js",
          "componentEnabled": true,
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": [
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "flowsWithType": [],
          "key": "unknown",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": [],
          "type": "BUG",
        }
      }
      issuesByLine={{}}
      lastSnippetGroup={true}
      loadDuplications={[Function]}
      locations={
        [
          {
            "component": "project:main.js",
            "index": 0,
            "textRange": {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ]
      }
      onIssueSelect={[MockFunction]}
      onLocationSelect={[MockFunction]}
      renderDuplicationPopup={[Function]}
      snippetGroup={
        {
          "component": {},
          "locations": [
            {
              "component": "project:main.js",
              "index": 0,
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "sources": [],
        }
      }
    />
  </ContextProvider>
</Fragment>
`;
